# AES-Encryption

./: .gitignore  .~lock.algo.odt#  AES.cpp  AES.h  CMakeLists.txt  README.md  correct_key_expansion_test_file.txt  doc2  main.cpp  message.txt  test.cpp  test.h  utility.cpp  utility.h
MPI/: mpi_metrics.txt
MPI/src/: AES.cpp  AES.h  Configuration.h  a.out  encryptedText.txt  main.cpp  message.txt  random_message.txt  utility.cpp  utility.h
OpenMP/: README.md  doc2
OpenMP/src/: AES.cpp  Configuration.cpp  Table.cpp  encrypted.txt  key.txt  main.cpp  random_message.txt  utility.cpp
src/: AES.cpp  AES.h  Configuration.cpp  Configuration.h  EncryptedText.txt  Table.cpp  Table.h  encryptedText.txt  key.txt  main.cpp  message.txt  random_message.txt  utility.cpp  utility.h
test/: test.cpp  test.h  tester.cpp
